add quick groupby for dataset SA

--- a/wrangle.ipynb
+++ b/wrangle.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "5b4ed491",
+   "id": "3a9c4a1e",
    "metadata": {},
    "source": [
     "# Apache Spark - Wrangling Network Intrustion Data\n",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "4d3f64e0",
+   "id": "a78ef794",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "22/01/21 18:35:58 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/01/21 23:33:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "bfde5a02",
+   "id": "be4b000a",
    "metadata": {},
    "source": [
     "## Data Ingest from CSV"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "97074475",
+   "id": "dbe33ef0",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "aa4ae03b",
+   "id": "b349f609",
    "metadata": {},
    "source": [
     "## Checking Columns for Nulls"
@@ -166,15 +166,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "024bd092",
+   "id": "1d2e5b00",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/01/21 18:36:09 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
-      "[Stage 4:===================================================>       (7 + 1) / 8]\r"
+      "22/01/21 23:33:58 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "[Stage 4:============================================>              (6 + 2) / 8]\r"
      ]
     },
     {
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bcec1a0",
+   "id": "510fc459",
    "metadata": {},
    "source": [
     "## Checking Value Counts of Some Columns\n",
@@ -253,7 +253,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "be811c01",
+   "id": "21a26a1a",
    "metadata": {},
    "outputs": [
     {
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5e39878d",
+   "id": "f9a0c1f7",
    "metadata": {},
    "source": [
     "### Protocol Type"
@@ -309,13 +309,14 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "82860dcf",
+   "id": "1911d7a5",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
+      "\r",
       "[Stage 16:>                                                         (0 + 8) / 8]\r"
      ]
     },
@@ -338,8 +339,6 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "[Stage 16:====================================>                     (5 + 3) / 8]\r",
-      "\r",
       "                                                                                \r"
      ]
     }
@@ -352,7 +351,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83816608",
+   "id": "82dc1e14",
    "metadata": {},
    "source": [
     "### Service"
@@ -361,7 +360,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "1e4da542",
+   "id": "d33acaec",
    "metadata": {},
    "outputs": [
     {
@@ -396,8 +395,6 @@
      "output_type": "stream",
      "text": [
       "\r",
-      "[Stage 22:==================================================>       (7 + 1) / 8]\r",
-      "\r",
       "                                                                                \r"
      ]
     }
@@ -410,7 +407,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "69d09efb",
+   "id": "3a7f5c29",
    "metadata": {},
    "source": [
     "### Error Flags"
@@ -419,14 +416,14 @@
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "7b5e3904",
+   "id": "9ad26987",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 28:==================================================>       (7 + 1) / 8]\r"
+      "[Stage 28:>                                                         (0 + 8) / 8]\r"
      ]
     },
     {
@@ -468,7 +465,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e97ff44",
+   "id": "b92e4967",
    "metadata": {},
    "source": [
     "### Target Column"
@@ -477,47 +474,130 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "e1574b0c",
+   "id": "1aec8e48",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "                                                                                \r"
+      "[Stage 34:>                                                         (0 + 8) / 8]\r"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "+----------+-------+----------+\n",
-      "|    target|  count|proportion|\n",
-      "+----------+-------+----------+\n",
-      "|    smurf.|2807886|      0.57|\n",
-      "|  neptune.|1072017|      0.22|\n",
-      "|   normal.| 972781|       0.2|\n",
-      "|    satan.|  15892|       0.0|\n",
-      "|  ipsweep.|  12481|       0.0|\n",
-      "|portsweep.|  10413|       0.0|\n",
-      "|     nmap.|   2316|       0.0|\n",
-      "|     back.|   2203|       0.0|\n",
-      "+----------+-------+----------+\n",
-      "only showing top 8 rows\n",
+      "+----------------+-------+----------+\n",
+      "|          target|  count|proportion|\n",
+      "+----------------+-------+----------+\n",
+      "|          smurf.|2807886|      0.57|\n",
+      "|        neptune.|1072017|      0.22|\n",
+      "|         normal.| 972781|       0.2|\n",
+      "|          satan.|  15892|       0.0|\n",
+      "|        ipsweep.|  12481|       0.0|\n",
+      "|      portsweep.|  10413|       0.0|\n",
+      "|           nmap.|   2316|       0.0|\n",
+      "|           back.|   2203|       0.0|\n",
+      "|    warezclient.|   1020|       0.0|\n",
+      "|       teardrop.|    979|       0.0|\n",
+      "|            pod.|    264|       0.0|\n",
+      "|   guess_passwd.|     53|       0.0|\n",
+      "|buffer_overflow.|     30|       0.0|\n",
+      "|           land.|     21|       0.0|\n",
+      "|    warezmaster.|     20|       0.0|\n",
+      "|           imap.|     12|       0.0|\n",
+      "|        rootkit.|     10|       0.0|\n",
+      "|     loadmodule.|      9|       0.0|\n",
+      "|      ftp_write.|      8|       0.0|\n",
+      "|       multihop.|      7|       0.0|\n",
+      "|            phf.|      4|       0.0|\n",
+      "|           perl.|      3|       0.0|\n",
+      "|            spy.|      2|       0.0|\n",
+      "+----------------+-------+----------+\n",
       "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
      ]
     }
    ],
    "source": [
     "# target - normal traffic or attack type\n",
     "df.groupBy('target').count().sort('count', ascending=False)\\\n",
-    "    .withColumn('proportion', round(col('count') / df.count(), 2)).show(8)"
+    "    .withColumn('proportion', round(col('count') / df.count(), 2)).show(30)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42a02aec",
+   "metadata": {},
+   "source": [
+    "### Combination Counts"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "id": "ce35b3d6",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "[Stage 40:>                                                         (0 + 8) / 8]\r"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "+-------------+--------+---------+-------+----------+\n",
+      "|protocol_type| service|   binary|  count|proportion|\n",
+      "+-------------+--------+---------+-------+----------+\n",
+      "|         icmp|   ecr_i|anomalous|2808204|      0.57|\n",
+      "|          tcp| private|anomalous|1024311|      0.21|\n",
+      "|          tcp|    http|   normal| 619046|      0.13|\n",
+      "|          tcp|    smtp|   normal|  95371|      0.02|\n",
+      "|          udp| private|   normal|  73848|      0.02|\n",
+      "|          udp|domain_u|   normal|  57773|      0.01|\n",
+      "|          udp|   other|   normal|  55891|      0.01|\n",
+      "|          tcp|ftp_data|   normal|  38093|      0.01|\n",
+      "|          tcp|   other|anomalous|  15869|       0.0|\n",
+      "|         icmp|   eco_i|anomalous|  12570|       0.0|\n",
+      "+-------------+--------+---------+-------+----------+\n",
+      "only showing top 10 rows\n",
+      "\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\r",
+      "                                                                                \r"
+     ]
+    }
+   ],
+   "source": [
+    "# show groupby of most-common combos for protocol, service, and binary class\n",
+    "df.withColumn('binary', when(df.target != 'normal.', 'anomalous').otherwise('normal'))\\\n",
+    "    .groupBy('protocol_type', 'service', 'binary').count().sort('count', ascending=False)\\\n",
+    "    .withColumn('proportion', round(col('count') / df.count(), 2))\\\n",
+    "    .show(10)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94cc6529",
+   "id": "3a4e7094",
    "metadata": {},
    "outputs": [],
    "source": []
