complete initial checks

--- a/initial_checks.ipynb
+++ b/initial_checks.ipynb
@@ -2,10 +2,10 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "3a9c4a1e",
+   "id": "5181d52a",
    "metadata": {},
    "source": [
-    "# Apache Spark - Wrangling Network Intrustion Data\n",
+    "# Apache Spark - Network Intrustion Data - Initial Look\n",
     "In this notebook I'll be using Spark to wrangle a network intrusion dataset.\n",
     "\n",
     "## Pre-Wrangling Exploration Results\n",
@@ -70,7 +70,7 @@
   {
    "cell_type": "code",
    "execution_count": 1,
-   "id": "a78ef794",
+   "id": "519524bb",
    "metadata": {},
    "outputs": [
     {
@@ -85,7 +85,7 @@
       "Using Spark's default log4j profile: org/apache/spark/log4j-defaults.properties\n",
       "Setting default log level to \"WARN\".\n",
       "To adjust logging level use sc.setLogLevel(newLevel). For SparkR, use setLogLevel(newLevel).\n",
-      "22/01/21 23:33:46 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
+      "22/01/22 19:06:04 WARN NativeCodeLoader: Unable to load native-hadoop library for your platform... using builtin-java classes where applicable\n"
      ]
     }
    ],
@@ -105,7 +105,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "be4b000a",
+   "id": "a199a4c2",
    "metadata": {},
    "source": [
     "## Data Ingest from CSV"
@@ -114,7 +114,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "dbe33ef0",
+   "id": "abf5d65b",
    "metadata": {},
    "outputs": [
     {
@@ -157,7 +157,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b349f609",
+   "id": "84d4c8d1",
    "metadata": {},
    "source": [
     "## Checking Columns for Nulls"
@@ -166,15 +166,15 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "id": "1d2e5b00",
+   "id": "3e0ef938",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "22/01/21 23:33:58 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
-      "[Stage 4:============================================>              (6 + 2) / 8]\r"
+      "22/01/22 19:06:16 WARN package: Truncated the string representation of a plan since it was too large. This behavior can be adjusted by setting 'spark.sql.debug.maxToStringFields'.\n",
+      "[Stage 4:===================================================>       (7 + 1) / 8]\r"
      ]
     },
     {
@@ -243,24 +243,24 @@
   },
   {
    "cell_type": "markdown",
-   "id": "510fc459",
+   "id": "cf5c7882",
    "metadata": {},
    "source": [
     "## Checking Value Counts of Some Columns\n",
-    "### Duration"
+    "### Duration Feature Look"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "21a26a1a",
+   "id": "1a462c4f",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 10:=====================>                                    (3 + 5) / 8]\r"
+      "[Stage 10:==============>                                           (2 + 6) / 8]\r"
      ]
     },
     {
@@ -300,23 +300,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f9a0c1f7",
+   "id": "6b44c30f",
    "metadata": {},
    "source": [
-    "### Protocol Type"
+    "### Protocol Type Feature Look"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "1911d7a5",
+   "id": "b5210f41",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "[Stage 16:>                                                         (0 + 8) / 8]\r"
      ]
     },
@@ -351,16 +350,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "82dc1e14",
+   "id": "898168bf",
    "metadata": {},
    "source": [
-    "### Service"
+    "### Service Feature Look"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "d33acaec",
+   "id": "982d1cf0",
    "metadata": {},
    "outputs": [
     {
@@ -407,23 +406,23 @@
   },
   {
    "cell_type": "markdown",
-   "id": "3a7f5c29",
+   "id": "2b2e1662",
    "metadata": {},
    "source": [
-    "### Error Flags"
+    "### Error Flags Feature Look"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 7,
-   "id": "9ad26987",
+   "id": "f3cd19a5",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "[Stage 28:>                                                         (0 + 8) / 8]\r"
+      "                                                                                \r"
      ]
     },
     {
@@ -447,14 +446,6 @@
       "+------+-------+----------+\n",
       "\n"
      ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\r",
-      "                                                                                \r"
-     ]
     }
    ],
    "source": [
@@ -465,16 +456,16 @@
   },
   {
    "cell_type": "markdown",
-   "id": "b92e4967",
+   "id": "f32e0b15",
    "metadata": {},
    "source": [
-    "### Target Column"
+    "### Target Column Feature Look"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "1aec8e48",
+   "id": "3ee4731f",
    "metadata": {},
    "outputs": [
     {
@@ -523,6 +514,8 @@
      "output_type": "stream",
      "text": [
       "\r",
+      "[Stage 34:==================================================>       (7 + 1) / 8]\r",
+      "\r",
       "                                                                                \r"
      ]
     }
@@ -535,23 +528,22 @@
   },
   {
    "cell_type": "markdown",
-   "id": "42a02aec",
+   "id": "672a47fb",
    "metadata": {},
    "source": [
-    "### Combination Counts"
+    "### Combination Counts Feature Look"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "ce35b3d6",
+   "id": "3c72367d",
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "\r",
       "[Stage 40:>                                                         (0 + 8) / 8]\r"
      ]
     },
@@ -597,7 +589,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3a4e7094",
+   "id": "60a03809",
    "metadata": {},
    "outputs": [],
    "source": []
